# emoji-crm

./: README.md  pyproject.toml
docs/: data_model.md
emoji_crm/alignments/: __init__.py  alignments.py
emoji_crm/cli/: cli.py
emoji_crm/data/: __init__.py  crm.py  skos_to_crm.rq
